--- a/paper/Step1_data_simulaltion.ipynb
+++ b/paper/Step1_data_simulaltion.ipynb
@@ -22,8 +22,8 @@
    "id": "13788c0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.567966Z",
-     "start_time": "2024-03-10T07:20:23.506340Z"
+     "end_time": "2024-03-10T12:24:15.294885Z",
+     "start_time": "2024-03-10T12:23:34.632145Z"
     }
    },
    "outputs": [
@@ -57,8 +57,8 @@
    "id": "77f0bc0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.578734Z",
-     "start_time": "2024-03-10T07:20:45.570983Z"
+     "end_time": "2024-03-10T12:24:15.310221Z",
+     "start_time": "2024-03-10T12:24:15.300010Z"
     }
    },
    "outputs": [],
@@ -87,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2c764e7178a8f589",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.653220Z",
-     "start_time": "2024-03-10T07:20:45.580745Z"
+     "end_time": "2024-03-10T12:24:23.041127Z",
+     "start_time": "2024-03-10T12:24:23.031135Z"
     }
    },
    "outputs": [],
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c0601192",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.667812Z",
-     "start_time": "2024-03-10T07:20:45.657245Z"
+     "end_time": "2024-03-10T12:26:13.121597Z",
+     "start_time": "2024-03-10T12:26:13.108890Z"
     }
    },
    "outputs": [],
@@ -146,7 +146,7 @@
     "trend_value = None\n",
     "\n",
     "# ARIMA (p,d,q)\n",
-    "order = (0, 1, 0)\n",
+    "order = (0, 1, 0) # Y_t = Y_(t-1) + e_t\n",
     "ar_coefs = None\n",
     "ma_coefs = None\n",
     "\n",
@@ -166,12 +166,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0de1d9f9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.690527Z",
-     "start_time": "2024-03-10T07:20:45.672825Z"
+     "end_time": "2024-03-10T12:26:29.999073Z",
+     "start_time": "2024-03-10T12:26:29.984154Z"
     }
    },
    "outputs": [],
@@ -190,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "977c9907",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.709412Z",
-     "start_time": "2024-03-10T07:20:45.695543Z"
+     "end_time": "2024-03-10T12:26:30.866542Z",
+     "start_time": "2024-03-10T12:26:30.823433Z"
     }
    },
    "outputs": [],
@@ -225,13 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9fedf5af5100ae6e",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.724752Z",
-     "start_time": "2024-03-10T07:20:45.712422Z"
+     "end_time": "2024-03-10T12:28:41.055982Z",
+     "start_time": "2024-03-10T12:28:41.027392Z"
     }
    },
    "outputs": [],
@@ -250,9 +250,11 @@
     "ma_coefs = None\n",
     "\n",
     "# Seasonal Component (P,D,Q,m)\n",
-    "seasonal_order = (2, 0, 0, 12)\n",
+    "seasonal_order = (2, 0, 0, 12)  \n",
     "sar_coefs = [0.4, 0.3]\n",
-    "sma_coefs = None"
+    "sma_coefs = None\n",
+    "\n",
+    "# Y_t = mu + Y_(t-1) + 0.4 * Y_(t-12) + 0.3 * Y_(t-24) + e_t"
    ]
   },
   {
@@ -267,13 +269,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ce3ca09949438a72",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.743433Z",
-     "start_time": "2024-03-10T07:20:45.728766Z"
+     "end_time": "2024-03-10T12:28:43.459230Z",
+     "start_time": "2024-03-10T12:28:43.412382Z"
     }
    },
    "outputs": [],
@@ -292,13 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "96588585369cb3b8",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.766197Z",
-     "start_time": "2024-03-10T07:20:45.746453Z"
+     "end_time": "2024-03-10T12:28:44.301719Z",
+     "start_time": "2024-03-10T12:28:44.248996Z"
     }
    },
    "outputs": [],
@@ -313,7 +315,7 @@
     "collapsed": false
    },
    "source": [
-    "### 3.3) + Decent ARIMA components"
+    "### 3.3) + Weak ARIMA components"
    ]
   },
   {
@@ -328,13 +330,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3e8c80320d5cf856",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.778238Z",
-     "start_time": "2024-03-10T07:20:45.770209Z"
+     "end_time": "2024-03-10T12:29:54.644428Z",
+     "start_time": "2024-03-10T12:29:54.610435Z"
     }
    },
    "outputs": [],
@@ -349,7 +351,7 @@
     "\n",
     "# ARIMA (p,d,q)\n",
     "order = (1, 1, 1)\n",
-    "ar_coefs = [0.1]\n",
+    "ar_coefs = [0.1]   # Y_t = 0.1*Y_(t-1)  ... + e_t + 0.2*e_(t-1)\n",
     "ma_coefs = [0.2]\n",
     "\n",
     "# Seasonal Component (P,D,Q,m)\n",
@@ -370,13 +372,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "df8380450ef430f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.797791Z",
-     "start_time": "2024-03-10T07:20:45.781251Z"
+     "end_time": "2024-03-10T12:29:56.452589Z",
+     "start_time": "2024-03-10T12:29:56.410636Z"
     }
    },
    "outputs": [],
@@ -395,13 +397,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d27354189af7f40d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.824626Z",
-     "start_time": "2024-03-10T07:20:45.801805Z"
+     "end_time": "2024-03-10T12:29:58.429277Z",
+     "start_time": "2024-03-10T12:29:58.391992Z"
     }
    },
    "outputs": [],
@@ -431,13 +433,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "9eb01863b6520d6d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.841411Z",
-     "start_time": "2024-03-10T07:20:45.829641Z"
+     "end_time": "2024-03-10T12:31:14.175766Z",
+     "start_time": "2024-03-10T12:31:14.162239Z"
     }
    },
    "outputs": [],
@@ -473,13 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d06cc7229d7e0cc",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.864355Z",
-     "start_time": "2024-03-10T07:20:45.850426Z"
+     "end_time": "2024-03-10T12:31:16.097007Z",
+     "start_time": "2024-03-10T12:31:16.029733Z"
     }
    },
    "outputs": [],
@@ -498,13 +500,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "b3a04c609ea880a6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.884158Z",
-     "start_time": "2024-03-10T07:20:45.867367Z"
+     "end_time": "2024-03-10T12:31:18.229425Z",
+     "start_time": "2024-03-10T12:31:18.186523Z"
     }
    },
    "outputs": [],
@@ -540,12 +542,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "610223da",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.907202Z",
-     "start_time": "2024-03-10T07:20:45.887168Z"
+     "end_time": "2024-03-10T12:32:31.854419Z",
+     "start_time": "2024-03-10T12:32:31.775719Z"
     }
    },
    "outputs": [],
@@ -600,19 +602,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "7c0c4536",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.941594Z",
-     "start_time": "2024-03-10T07:20:45.910214Z"
+     "end_time": "2024-03-10T12:32:33.722489Z",
+     "start_time": "2024-03-10T12:32:33.551314Z"
     }
    },
    "outputs": [],
    "source": [
     "# Trend\n",
     "trend = False\n",
-    "trend_value = 0.1\n",
+    "trend_value = None\n",
     "\n",
     "# ARIMA (p,d,q)\n",
     "order = (4, 1, 4)\n",
@@ -657,12 +659,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "410ef4ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.969775Z",
-     "start_time": "2024-03-10T07:20:45.944611Z"
+     "end_time": "2024-03-10T12:32:45.451036Z",
+     "start_time": "2024-03-10T12:32:45.412920Z"
     }
    },
    "outputs": [],
@@ -716,13 +718,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "ded4f3a6a058af0",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:45.983322Z",
-     "start_time": "2024-03-10T07:20:45.972787Z"
+     "end_time": "2024-03-10T12:34:41.390729Z",
+     "start_time": "2024-03-10T12:34:41.380446Z"
     }
    },
    "outputs": [],
@@ -736,7 +738,7 @@
     "upper_bound = 90\n",
     "\n",
     "# Exogenous Variables\n",
-    "exog = [exo1_ts, exo2_ts, exo3_ts]\n",
+    "exog = [exo1_ts, exo2_ts, exo3_ts]  # NEW: Y_t = ... + alpha_1 * X_t + ....\n",
     "exog_coefs = [0.4, 0.2, -0.3]\n",
     "\n",
     "# Trend\n",
@@ -744,7 +746,7 @@
     "trend_value = 0.01\n",
     "\n",
     "# ARIMA (p,d,q)\n",
-    "order = (3, 1, 4)\n",
+    "order = (3, 1, 4)  # Are taken from the StrongSARIMA (last model)\n",
     "ar_coefs = [0.6, -0.2, 0.1]\n",
     "ma_coefs = [0.4, -0.2, -0.1, 0.1]\n",
     "\n",
@@ -766,13 +768,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "fea79e6d362977c0",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:46.011084Z",
-     "start_time": "2024-03-10T07:20:45.987335Z"
+     "end_time": "2024-03-10T12:34:42.318206Z",
+     "start_time": "2024-03-10T12:34:42.272279Z"
     }
    },
    "outputs": [],
@@ -791,13 +793,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "id": "b63dcf3fa037d5f1",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:46.032755Z",
-     "start_time": "2024-03-10T07:20:46.015099Z"
+     "end_time": "2024-03-10T12:34:43.124308Z",
+     "start_time": "2024-03-10T12:34:43.099178Z"
     }
    },
    "outputs": [],
@@ -825,12 +827,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:46.047526Z",
-     "start_time": "2024-03-10T07:20:46.035772Z"
+     "end_time": "2024-03-10T12:34:51.903423Z",
+     "start_time": "2024-03-10T12:34:51.889303Z"
     }
    },
    "id": "f070d92337a0f1eb",
-   "execution_count": 22
+   "execution_count": 28
   },
   {
    "cell_type": "markdown",
@@ -844,12 +846,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "952ff883",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:51.212329Z",
-     "start_time": "2024-03-10T07:20:46.051543Z"
+     "end_time": "2024-03-10T12:35:10.395133Z",
+     "start_time": "2024-03-10T12:34:54.962962Z"
     }
    },
    "outputs": [
@@ -959,12 +961,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:53.594217Z",
-     "start_time": "2024-03-10T07:20:51.215342Z"
+     "end_time": "2024-03-10T12:35:15.655583Z",
+     "start_time": "2024-03-10T12:35:10.403189Z"
     }
    },
    "id": "8bdf2d56a4cea32c",
-   "execution_count": 24
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -1031,12 +1033,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:55.486119Z",
-     "start_time": "2024-03-10T07:20:53.597241Z"
+     "end_time": "2024-03-10T12:39:38.415334Z",
+     "start_time": "2024-03-10T12:39:35.887904Z"
     }
    },
    "id": "92642a4db8522601",
-   "execution_count": 25
+   "execution_count": 31
   },
   {
    "cell_type": "code",
@@ -1066,12 +1068,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:56.813462Z",
-     "start_time": "2024-03-10T07:20:55.488135Z"
+     "end_time": "2024-03-10T12:40:13.442127Z",
+     "start_time": "2024-03-10T12:40:08.718206Z"
     }
    },
    "id": "1f2349378903fb3c",
-   "execution_count": 26
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
@@ -1083,12 +1085,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "cd8ed32e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-10T07:20:56.871861Z",
-     "start_time": "2024-03-10T07:20:56.815481Z"
+     "end_time": "2024-03-10T12:40:49.655523Z",
+     "start_time": "2024-03-10T12:40:49.604791Z"
     }
    },
    "outputs": [],
@@ -1112,6 +1114,15 @@
     "    # Export\n",
     "    series.to_csv(os.path.join(SIMDATA_DIR, series_names[i] + \".csv\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ecc5b1494e07109c"
   }
  ],
  "metadata": {
