--- a/paper/Step2_run_pipeline.ipynb
+++ b/paper/Step2_run_pipeline.ipynb
@@ -1614,7 +1614,7 @@
     }
    ],
    "source": [
-    "df_dict = df_dict[\"WeakSARIMA\"]\n",
+    "# df_dict = df_dict[\"WeakSARIMA\"]\n",
     "output_dictionaries = run_pipeline(\n",
     "    df=df_dict, models=MODELS, metrics=METRICS,\n",
     "    # end=\"2010-12-31\",\n",
