adding final results for eurusd

--- a/paper/tables/descriptives.tex
+++ b/paper/tables/descriptives.tex
@@ -13,6 +13,7 @@ SARIMAX & 2004-01 & 2023-12 & 240.0 & 66.79 & 12.47 & 40.0 & 56.64 & 68.11 & 75.
 x1 & 2004-01 & 2023-12 & 240.0 & 360.27 & 73.7 & 200.0 & 308.95 & 381.15 & 418.61 & 500.0 \\
 x2 & 2004-01 & 2023-12 & 240.0 & 57.96 & 8.98 & 40.0 & 50.99 & 56.78 & 64.34 & 80.0 \\
 x3 & 2004-01 & 2023-12 & 240.0 & 923.17 & 12.48 & 900.0 & 914.46 & 921.0 & 933.86 & 950.0 \\
+bid_close & 2020-01-01 & 2024-02-06 & 101921.0 & 1.11 & 0.06 & 0.95 & 1.07 & 1.1 & 1.17 & 1.23 \\
 \bottomrule
 \end{tabular}
 \end{table}
