adding eurusd analysis (unit root, plot, descriptives, ...)

--- a/paper/Step2_2_run_pipeline_eurusd.ipynb
+++ b/paper/Step2_2_run_pipeline_eurusd.ipynb
@@ -87,9 +87,9 @@
    "source": [
     "select_datasets = [\"eurusd\"]\n",
     "df_dict = {}\n",
-    "for file in os.listdir(TESTDATA_DIR):\n",
+    "for file in os.listdir(EUR_USD_DIR):\n",
     "    if file.replace(\".csv\", \"\") in select_datasets:\n",
-    "        df = csv_reader(TESTDATA_DIR, file)\n",
+    "        df = csv_reader(EUR_USD_DIR, file)\n",
     "        df_dict[df.attrs['file_name']] = df\n",
     "    else:\n",
     "        print(f\"Skipping {file}...\")\n"
@@ -4143,13 +4143,24 @@
    "execution_count": 8
   },
   {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "# 4) Export Aggregated EURUSD Data"
+   ],
    "metadata": {
     "collapsed": false
-   },
-   "execution_count": null
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# from src.utils.paths import EXPORT_DIR\n",
+    "# agg_target = csv_exporter(EXPORT_DIR, output_dictionaries['target and covariates'][0]})"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
