--- a/paper/tables/descriptives.tex
+++ b/paper/tables/descriptives.tex
@@ -1,19 +1,20 @@
 \begin{table}
 \caption{Descriptive Statistics}
-\begin{tabular}{lllllllllll}
+\begin{tabular}{lllllllllllll}
 \toprule
- & start & end & count & mean & std & min & 25% & 50% & 75% & max \\
-Data &  &  &  &  &  &  &  &  &  &  \\
+ & start & end & count & mean & std & min & 25% & 50% & 75% & max & NaN & freq \\
+Data &  &  &  &  &  &  &  &  &  &  &  &  \\
 \midrule
-RW & 2004-01 & 2023-12 & 240.0 & 68.22 & 10.1 & 40.0 & 61.59 & 68.49 & 74.8 & 90.0 \\
-TrendSeasRW & 2004-01 & 2023-12 & 240.0 & 65.21 & 9.86 & 40.0 & 59.44 & 65.28 & 70.05 & 90.0 \\
-WeakSARIMA & 2004-01 & 2023-12 & 240.0 & 65.43 & 9.93 & 40.0 & 59.7 & 65.63 & 70.12 & 90.0 \\
-StrongSARIMA & 2004-01 & 2023-12 & 240.0 & 65.67 & 10.66 & 40.0 & 58.53 & 66.65 & 70.41 & 90.0 \\
-SARIMAX & 2004-01 & 2023-12 & 240.0 & 66.79 & 12.47 & 40.0 & 56.64 & 68.11 & 75.75 & 90.0 \\
-x1 & 2004-01 & 2023-12 & 240.0 & 360.27 & 73.7 & 200.0 & 308.95 & 381.15 & 418.61 & 500.0 \\
-x2 & 2004-01 & 2023-12 & 240.0 & 57.96 & 8.98 & 40.0 & 50.99 & 56.78 & 64.34 & 80.0 \\
-x3 & 2004-01 & 2023-12 & 240.0 & 923.17 & 12.48 & 900.0 & 914.46 & 921.0 & 933.86 & 950.0 \\
-bid_close & 2020-01-01 & 2024-02-06 & 101921.0 & 1.11 & 0.06 & 0.95 & 1.07 & 1.1 & 1.17 & 1.23 \\
+RW & 2004-01 & 2023-12 & 240.0 & 68.22 & 10.1 & 40.0 & 61.59 & 68.49 & 74.8 & 90.0 & 0 & MS \\
+TrendSeasRW & 2004-01 & 2023-12 & 240.0 & 65.21 & 9.86 & 40.0 & 59.44 & 65.28 & 70.05 & 90.0 & 0 & MS \\
+WeakSARIMA & 2004-01 & 2023-12 & 240.0 & 65.43 & 9.93 & 40.0 & 59.7 & 65.63 & 70.12 & 90.0 & 0 & MS \\
+StrongSARIMA & 2004-01 & 2023-12 & 240.0 & 65.67 & 10.66 & 40.0 & 58.53 & 66.65 & 70.41 & 90.0 & 0 & MS \\
+SARIMAX & 2004-01 & 2023-12 & 240.0 & 66.79 & 12.47 & 40.0 & 56.64 & 68.11 & 75.75 & 90.0 & 0 & MS \\
+x1 & 2004-01 & 2023-12 & 240.0 & 360.27 & 73.7 & 200.0 & 308.95 & 381.15 & 418.61 & 500.0 & 0 & MS \\
+x2 & 2004-01 & 2023-12 & 240.0 & 57.96 & 8.98 & 40.0 & 50.99 & 56.78 & 64.34 & 80.0 & 0 & MS \\
+x3 & 2004-01 & 2023-12 & 240.0 & 923.17 & 12.48 & 900.0 & 914.46 & 921.0 & 933.86 & 950.0 & 0 & MS \\
+bid_close & 2020-01-01 00:00:00 & 2024-02-06 00:00:00 & 101921.0 & 1.11 & 0.06 & 0.95 & 1.07 & 1.1 & 1.17 & 1.23 & 41792 & 15T \\
+bid_close_agg & 2020-01-02 & 2024-02-06 & 1069.0 & 1.11 & 0.06 & 0.96 & 1.07 & 1.1 & 1.17 & 1.23 & 0 & B \\
 \bottomrule
 \end{tabular}
 \end{table}
