--- a/user/run_pipeline.ipynb
+++ b/user/run_pipeline.ipynb
@@ -79,7 +79,7 @@
     "## Using the EUR-USD Exchange Rate data\n",
     "\n",
     "# Read EUR-USD exchange data\n",
-    "df = csv_reader(TESTDATA_DIR, 'eurusd')"
+    "df = csv_reader(TESTDATA_DIR, 'eurusd_test')\n"
    ]
   },
   {
@@ -267,7 +267,7 @@
     "    run_pipeline(\n",
     "        df=df, models=MODELS, metrics=METRICS,\n",
     "        fh=1,\n",
-    "        start=\"2020-01-01\", end=\"2020-03-31\",\n",
+    "        # start=\"2020-01-01\", end=\"2020-03-31\",\n",
     "        agg_method='last', agg_freq='B',\n",
     "        target='bid_close', covariates=None,\n",
     "        select_forecaster='all',\n",
