cleaning repo (removing archive, comments, annd notes etc)

--- a/paper/tables/descriptives.tex
+++ b/paper/tables/descriptives.tex
@@ -2,7 +2,7 @@
 \caption{Descriptive Statistics}
 \begin{tabular}{lllllllllllll}
 \toprule
- & start & end & count & mean & std & min & 25\% & 50\% & 75\% & max & NaN & freq \\
+ & start & end & count & mean & std & min & 25% & 50% & 75% & max & NaN & freq \\
 Data &  &  &  &  &  &  &  &  &  &  &  &  \\
 \midrule
 RW & 2004-01 & 2023-12 & 240.0 & 68.22 & 10.1 & 40.0 & 61.59 & 68.49 & 74.8 & 90.0 & 0 & MS \\
